--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,7 @@
     <property name="usefile" value="false" />
 
     <!-- If running the 'package' task, this property controls the name of the xml file to package -->
-    <property name="package.xml.dir" value="packages" />
+    <property name="package.xml.dir" value="${public.dir}/packages" />
     <property name="executable" value="GenomeAnalysisTK" />
 
     <property environment="env"/>
@@ -896,7 +896,7 @@
     <!-- Build a package consisting of all supporting files -->
     <target name="package" depends="dist,stage" description="bundle up an executable for distribution">
       <mkdir dir="dist/packages" />
-      <xslt destdir="dist/packages" style="packages/CreatePackager.xsl" useImplicitFileset="false">
+      <xslt destdir="dist/packages" style="${package.xml.dir}/CreatePackager.xsl" useImplicitFileset="false">
           <flattenmapper/>
           <fileset dir="${package.xml.dir}">
               <include name="${executable}.xml" />
@@ -934,7 +934,7 @@
 
       <!-- Use the packaging system to extract parts of picard-private we need -->
       <mkdir dir="${dist.dir}/packages" />
-      <xslt in="packages/PicardPrivate.xml" out="${dist.dir}/packages/BuildPicardPrivate.xml" style="packages/CreatePackager.xsl" />
+      <xslt in="${package.xml.dir}/PicardPrivate.xml" out="${dist.dir}/packages/BuildPicardPrivate.xml" style="${package.xml.dir}/CreatePackager.xsl" />
       <ant antfile="${dist.dir}/packages/BuildPicardPrivate.xml">
 	    <property name="additional.jars" value="${required.picard.jars}" />
       </ant>
