--- a/build.xml
+++ b/build.xml
@@ -741,8 +741,8 @@
                 <jvmarg value="-Dpipeline.run=${pipeline.run}" />
                 <jvmarg value="-Djava.io.tmpdir=${java.io.tmpdir}" />
                 <!-- needs to be if -->
-                <!--jvmarg value="-javaagent:lib/cofoja.jar"/-->
-                <!--jvmarg value="-Dcom.google.java.contract.log.contract=false"/-->
+<!--                 <jvmarg value="-javaagent:lib/cofoja.jar"/> -->
+<!--                 <jvmarg value="-Dcom.google.java.contract.log.contract=false"/> -->
 <!--                 <jvmarg value="-Xdebug"/> -->
 <!--                 <jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"/> -->
                 <classpath>
