Switched GridEngine from looking from environment variable to using embedded jar.

--- a/ivy.xml
+++ b/ivy.xml
@@ -48,6 +48,9 @@
     <!-- Dependencies for amazon.com S3 support -->
     <dependency org="net.java.dev.jets3t" name="jets3t" rev="0.8.0"/>
 
+    <!-- Dependencies for GridEngine -->
+    <dependency org="net.sf.gridscheduler" name="drmaa" rev="latest.integration"/>
+
     <!-- Scala dependancies -->
     <dependency org="org.scala-lang" name="scala-compiler" rev="2.8.1"/>
     <dependency org="org.scala-lang" name="scala-library" rev="2.8.1"/>
