V2 of the document system. Now uses GATKDoc class to organize documentation for arguments. Arguments now listed by feature (required, optional, hidden, etc) and link to detailed information about the argument in the html Lots of code moving between Class and ClassDoc objects.  Should be refactored into a single static utility class.

--- a/build.xml
+++ b/build.xml
@@ -468,7 +468,7 @@
                  docletpathref="doclet.classpath"
                  classpathref="external.dependencies"
                  classpath="${java.classes}"
-                 additionalparam="-build-timestamp &quot;${build.timestamp}&quot; -absolute-version ${build.version} -out ${basedir}/${resource.path} -quiet">
+                 additionalparam="-private -build-timestamp &quot;${build.timestamp}&quot; -absolute-version ${build.version} -out ${basedir}/${resource.path} -quiet -J-Xdebug -J-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005">
             <sourcefiles>
                 <union>
                     <fileset refid="java.source.files"/>
