Generalized handler to allow it to be used with any arbitrary class structure. DocumentedGATKFeature now includes a field for the group name. Build.xml works with public / private now.

--- a/build.xml
+++ b/build.xml
@@ -457,8 +457,9 @@
         </javadoc>
     </target>
 
-    <target name="walkerdocs" unless="uptodate.extracthelp"
+    <target name="gatkdocs" unless="uptodate.extracthelp" depends="gatk.compile"
 	        description="Extract help key/value pair file from the JavaDoc tags.">
+        <property name="gatk.target" value="private"/>
         <path id="doclet.classpath">
             <path refid="external.dependencies" />
             <pathelement location="${java.classes}" />
