--- a/build.xml
+++ b/build.xml
@@ -521,6 +521,7 @@
               <include name="**/utils/codecs/**/*.class"/>
               <include name="**/utils/variantcontext/**/*.class"/>
               <include name="**/UserException*.class"/>
+	      <include name="org/broadinstitute/sting/utils/help/DocumentedGATKFeature.class"/>
             </fileset>
         </jar>
     </target>
