--- a/build.xml
+++ b/build.xml
@@ -489,7 +489,7 @@
             <fileset dir="${java.classes}">
               <include name="**/utils/codecs/**/*.class"/>
               <include name="**/utils/variantcontext/**/*.class"/>
-              <include name="**/UserException*.class"/>
+              <include name="org/broadinstitute/sting/utils/exceptions/**"/>
             </fileset>
         </jar>
     </target>
