--- a/build.xml
+++ b/build.xml
@@ -973,11 +973,11 @@
             <sourcepath path="${java.public.source.dir}"/>
             <sourcepath path="${external.dir}"/>
         </javadoc>
-        <javadoc destdir="javadoc"
-                 classpathref="external.dependencies">
-            <sourcepath path="${java.private.source.dir}"/>
-            <exclude name="**" unless="include.private" />
-        </javadoc>        
+<!--         <javadoc destdir="javadoc" -->
+<!--                  classpathref="external.dependencies"> -->
+<!--             <sourcepath path="${java.private.source.dir}"/> -->
+<!--             <exclude name="**" unless="include.private" /> -->
+<!--         </javadoc>         -->
         <mkdir dir="scaladoc"/>
         <scaladoc srcdir="" destdir="scaladoc" classpathref="scala.dependencies" deprecation="yes" unchecked="yes">
             <src path="${scala.public.source.dir}"/>
