Enable conditional inclusion of documentation for hidden features in GATKDocs.
To include documentation for hidden features in the generated GATKDocs,
run with -Dgatkdocs.include.hidden=true

I will enable this flag when bamboo generates GATKDocs for unstable.

--- a/build.xml
+++ b/build.xml
@@ -490,11 +490,16 @@
             <pathelement location="${java.classes}" />
         </path>
 
+        <!-- Run with -Dgatkdocs.include.hidden=true to include documentation for hidden features -->
+        <condition property="gatkdocs.include.hidden.arg" value="-include-hidden" else="">
+            <isset property="gatkdocs.include.hidden" />
+        </condition>
+
         <javadoc doclet="org.broadinstitute.sting.utils.help.GATKDoclet"
                  docletpathref="doclet.classpath"
                  classpathref="external.dependencies"
                  classpath="${java.classes}"
-                 additionalparam="-private -build-timestamp &quot;${build.timestamp}&quot; -absolute-version ${build.version} -quiet -J-Xdebug -J-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"> <!-- -test to only do DocumentationTest walker -->
+                 additionalparam="${gatkdocs.include.hidden.arg} -private -build-timestamp &quot;${build.timestamp}&quot; -absolute-version ${build.version} -quiet -J-Xdebug -J-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"> <!-- -test to only do DocumentationTest walker -->
             <sourcefiles>
                 <union>
                     <fileset refid="all.java.source.files"/>
