Added "alltests" build targets.
To run the same set of tests as the bamboo "All Tests" plan (unit tests,
integration tests, and pipeline tests):

ant alltests

To do the same as above on only the public portion of the codebase:

ant alltests.public

--- a/build.xml
+++ b/build.xml
@@ -896,6 +896,18 @@
         </sequential>
     </macrodef>
 
+    <target name="alltests">
+        <antcall target="test" inheritAll="false"/>
+        <antcall target="integrationtest" inheritAll="false"/>
+        <antcall target="pipelinetest" inheritAll="false"/>
+    </target>
+
+    <target name="alltests.public">
+        <antcall target="test.public" inheritAll="false"/>
+        <antcall target="integrationtest.public" inheritAll="false"/>
+        <antcall target="pipelinetest.public" inheritAll="false"/>
+    </target>
+
     <!-- Our four different test conditions: Test, IntegrationTest, PerformanceTest, PipelineTest -->
     <target name="test" depends="init.buildall,test.compile" description="Run unit tests">
         <condition property="ttype" value="*UnitTest" else="${single}">
